made new changes to the website

--- a/index.html
+++ b/index.html
@@ -8,45 +8,31 @@
 
 <body>
 
-<img src="images/yulogo.png" alt="yulogo" width="140" height="80" />
-<<<<<<< HEAD
+<img src="images/yulogo.png" alt="yulogo" width="140" height="90" />
+
 <header>
-=======
-<header>    
->>>>>>> origin/master
+
 <a href="index.html"> Home </a>
 <a href="page2.html"> About </a>
 <a href="page3.html"> YUBA QA </a>
 <a href="page4.html"> L&D phase </a>
-<<<<<<< HEAD
-  
-</header>
-<h1> Year Up Bay Area (SF) </h1>
-<P> Year Up Bay Area is a one year, intensive training program that provides low-income young adults, ages 18-24, with a combination of hands-on skill development, college credits, and corporate internships. Since opening our doors in 2008, we have helped over 500 young adults cross the Opportunity Divide in the San Francisco Bay Area. 88% of our graduates are employed (earning competitive wages) or are attending college within four months of completing the program. </p>
-=======
 
-</header>
 <h1> Year Up Bay Area (SF) </h1>
 <P> Year Up Bay Area is a one-year, intensive training program that provides low-income young adults, ages 18-24, with a combination of hands-on skill development, college credits, and corporate internships. Since opening our doors in 2008, we have helped over 500 young adults cross the Opportunity Divide in the San Francisco Bay Area. 88% of our graduates are employed (earning competitive wages) or are attending college within four months of completing the program. </p>
->>>>>>> origin/master
+
+</header>
 <img src="images/yuod.png" alt="yuod" class="center" />
+<h1> What the program is about </h1>
 <h1>  </h1>
-<h1> Puerto Rico's Miguel Cotto </h1>
-<img src="images/MCotto.jpg" alt="MCotto" width="450" height="250" />
-<h1>Puerto Rico's OG </h1>
-<img src="images/HCamacho.jpg" alt="HCamacho" width="300" height="300" />
 
-<h1> A Legend with more victories than today's undisputed fighter </h1>
 
-<<<<<<< HEAD
 <p>
-=======
-<p> 
->>>>>>> origin/master
+  At Year Up, participants ages 18 to 24 get six months of technical and corporate-culture training and a six-month internship. Then the vast majority find jobs with the region’s top high-tech companies like Salesforce, Cisco, Yahoo and Facebook. The San Francisco Year Up office takes in about 240 applicants per year, while nationally there are about 3,000 trainees.
+
+  Those in the program pay nothing. In fact, they get paid $600 a month during the first six months of classroom training and $1,000 a month during their internship. They leave the program employable, making an average of $44,000 per year.
 
 </p>
 
-<img src="images/jcaesar.jpg" alt="jcaesar" width="300" height="300"/>
 
 
 
@@ -54,17 +40,15 @@
 
 
 
-<<<<<<< HEAD
 <footer>
-=======
-<footer>  
->>>>>>> origin/master
+
+<footer>
+
 &copy; Copyright by Juan Cardenas
 </footer>
 
 </body>
-<<<<<<< HEAD
+
 </html>
 =======
 </html>
->>>>>>> origin/master
