--- a/page4.html
+++ b/page4.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-<img src="images/MissionPunch.jpg" alt="missionpunch" width="80" height="80" />
+<img src="images/yulogo.png" alt="yulogo" width="140" height="90" />
 
-<header>    
+<header>
 <a href="index.html"> Home </a>
-<a href="Page2.html"> Greatest Bouts </a>
-<a href="Page3.html"> Back Then </a>
-<a href="Page4.html"> Now </a>
+<a href="Page2.html"> About </a>
+<a href="Page3.html"> YUBA QA </a>
+<a href="Page4.html"> L&D Phase </a>
 
 
 
@@ -25,14 +25,14 @@ Now
 <img src="images/MayweatherVSPacquiao.jpg"  alt="mayweathervspacquiao" width="350" height="350"    />
 
 
-<p> The Sport has changed since its early beginnings when it was first seen as a barbaric sport. Today the rounds are less than they were from being more than 12 rounds. Rules are more strict than before to protect the fighter from lethal injuries. Referees are making good judgements to make sure fighters can continue or to avoid further critical injury. Regulations are set for all matches so no foul play is possible to happen. 
+<p> The Sport has changed since its early beginnings when it was first seen as a barbaric sport. Today the rounds are less than they were from being more than 12 rounds. Rules are more strict than before to protect the fighter from lethal injuries. Referees are making good judgements to make sure fighters can continue or to avoid further critical injury. Regulations are set for all matches so no foul play is possible to happen.
 
 </p>
 
 <p> One thing that should change in the sport is to make sure that the sport can make better judgements on how fights are held. Such as the detection of performance enhancing drugs that come up in the bouts. The fight should continue when both fighters have been checked out by doctors and cutmans effectively. One thing that boxers must do is to be aware of their gloves that they are not plastered. Such practices are still seen in fights and often not caught and could damage an opponents well being and end careers.
 </p>
 
-<footer>  
+<footer>
 &copy; Copyright by Juan Cardenas
 </footer>
 
