--- a/page2.html
+++ b/page2.html
@@ -7,24 +7,23 @@
 </head>
 <body>
 
-<img src="images/MissionPunch.jpg" alt="missionpunch" width="80" height="80" />
+<img src="images/yulogo.png" alt="yulogo" width="140" height="90" />
 
 
 <header>
 <a href="index.html"> Home </a>
-<a href="Page2.html"> Greatest Bouts </a>
-<a href="Page3.html"> Back Then </a>
-<a href="Page4.html"> Now </a>
+<a href="Page2.html"> About </a>
+<a href="Page3.html"> YUBA QA </a>
+<a href="Page4.html"> L&D Phase </a>
 
 
 
 </header>
 
-<h1> Joe Louis VS Max Schmeling </h1>
+<h1> The Founder: Gerald Chertavian </h1>
 
-<img src="images/JoevsMax.jpg" alt="joevsmax" width="400" height="400"/>
+<img src="images/gchertavian.jpg" alt="gchertavian" width="600" height="450"/>
 <p>
-This was a fight to remember due to the fact that one fighter was defending a nation and proving a wide set of audience that the color of his skins, did not define the person he is. Max on the other hand was fighting for Nazi Germany. While he had a sense of pride for his country, the message of black fighters was that they could not fight. These 2 would come to be good friends and even help each other financially. While for most folks that this was the fight to determine the superiority of  fighters based on how they look.
 
 
 </p>
