--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </header>
 <img src="images/yuod.png" alt="yuod" class="center" />
-<h1> What the program is about </h1>
+<h1> The program's sole purpose </h1>
 <h1>  </h1>
 
 
@@ -34,9 +34,19 @@
 </p>
 
 
+<h1> With 5 tracks available to choose from  </h1>
+
+<p> Each new student will be exposed to different areas of tech and given the opportunity to express interest on a specific track. As the L and D phase progresses, each student will get to see how each track functions. There are courses that show some level of each track and explain what the work environment may be like.
+
+     </p>
 
 
+<h1> Support from staff, advisors, and mentors </h1>
 
+<p>
+With help from staff members, each student will be granted a set of advisors and later on in the program, mentors. Guidance is something that Year Up wants to place with all of their students in order for them to reach success.
+
+ </p>
 
 
 
