--- a/page2.html
+++ b/page2.html
@@ -24,20 +24,25 @@
 
 <img src="images/gchertavian.jpg" alt="gchertavian" width="600" height="450"/>
 <p>
-
+CEO and Founder of Year Up, a national program that empowers urban young adults to enter the economic mainstream. With its annual operating budget of over $100M, Year Up is one of the fastest growing non-profits in the nation and was recognized by Fast Company and The Monitor Group as one of the top 25 organizations using business excellence to engineer social change. Gerald serves on the Board of Advisors for the Harvard Business School Social Enterprise Initiative, and in 2013 was appointed by Massachusetts’ Governor Deval Patrick to serve as Chairman of the Roxbury Community College Board of Trustees. In 2015, he was appointed by Massachusetts Governor Charles Baker to serve on the Task Force on Economic Opportunity for Populations Facing Chronically High Rates of Unemployment. Gerald is a former Board member of the MA Department of Elementary and Secondary Education and is an Emeritus Trustee of Bowdoin College and the Boston Foundation.
 
 </p>
 
-<h1> Ali vs Frazier  </h1>
+<h1> Where it started  </h1>
 
-<img src="images/Ali-vs-Frazier.jpg" alt="ali-vs=frazier" width="400" height="400"/>
-<p>  This was a fight that transcended boxing. Ali had become a symbol of the anti-establishment movement after refusing to be inducted to the US Army. Threatened with five years in prison he refused to step forward and was immediately stripped of his heavyweight title and had his boxing license suspended. It would be three years until he was once again allowed to lace up the gloves in a professional bout. The fight put 2 fighters as the main event for the fight of the century and a rivalry tha continued throughout their career.
+<img src="images/dgorigin.jpg" alt="ali-vs=frazier" width="400" height="400"/>
+<p> I signed up again as a Big Brother, and was matched with David Heredia, a 10-year-old Dominican who lived with his mother and brothers on the Lower East Side.
+
+I spent every Saturday with David, who had a gift for drawing, and I saw how hard it was for him to realize his dreams without outside support. That experience planted the idea that I wanted to create a program to equip talented and motivated youth with support, training and job opportunities. I remain close to this day with David, who now has a career in animation.
+
+</p>
+
+<h1> Where Year up is now </h1>
+<img src="images/yulocations.png" alt="yulocations" width="600" height="400"/>
+
+<p>
+With locations spanning from the east coast to the west. New locations that are now in the Los Angeles area, and others that are not included on the map
  </p>
-
-<h1> DeLaHoya vs Mayorga </h1>
-<img src="images/DeLaHoyavsMayorga.jpg" alt="delahoyavsmayorga" width="400" height="400"/>
-
-
 
 
 <footer>
