--- a/page3.html
+++ b/page3.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img src="images/yulogo.png" alt="yulogo" width="140" height="90" />
+<img src="images/yulogo.png" alt="yulogo" width="140" height="90"/>
 
 <header>
 <a href="index.html"> Home </a>
@@ -16,14 +16,21 @@
 
 </header>
 
-<img src="images/AncientBoxing.jpg" alt="ancientboxing"  width="350" height="350"    />
+<img src="images/yuqa.png" alt="yuqa"  width="980" height="350"/>
 
-
-<h1> Back Then </h1>
-<p>  Historical evidence lead to the fact that boxing was prevalent in North Africa in 4000 BC. It was also popularly played in Greek and Rome. The rules were crude then and boxers often indulged in lethal boxing rounds with leather taped on their bare hands. It is believed that In Ancient Rome, the boxing fighters were usually offenders and slaves. They played the game to win and gain independence. However, facts also point to free men fighting for competition and the spirit of sport. Eventually, Augustus is known to have banned fighting. It is also said that in 500 A.D. Theodoric banned the sport, owing to its popularity and growing distraction caused in public life.
+<h1> The track that you have to be in </h1>
+<p>Year Up’s Quality Assurance training teaches students how to test computer software and websites for bugs
+and errors. Q.A. students learn the basics of the software development lifecycle, how to read and analyze
+application requirements, how to execute manual and automated tests, and how to track and report software
+defects- all using industry-standard tools and techniques.
 </p>
 
-<p> Many say that Boxing officially started in the 1600s the time when British Nobles had their servant box each other for the sole purpose of entertaining. At least the first fight was recorded in this era, many fights have gone unrecorded but are not denied that were boxing matches. The fights began to cross boundaries when slaves are thrown into ring with non-slaves. This was seen as entertaining in those times when the average life was seen dull and the call for such events were demonstrated. The fights held in those times had a lot of gambling involved where bets were placed on the most competent fighters. This was a popular thing to do to earn money and to gain popularity among the town and cities in Western Europe.
+<h1>   Why?   </h1>
+
+<p>
+Quality Assurance Professionals have multiple personalities when working. They are the project manager, developer, customer service, tech savvy customer, non tech savvy customer, angry customer, lazy customer, sales representative and last but not least the quality assurance professional. Obviously your quality assurance personality is the most important because you are allowed to be all of these people but you understand that the company’s “BRAND” is the most important thing.Knowing this.
+Many students who enter the QA track have been able to apply their skills in troubleshooting and identifying bugs that occur in the application. Through tools such as Jira, students gain the fundamentals to learn what is a bug and what is intentional. It doesn't stop there, other concepts are brought up such as methodologies that are used in the field. These include: Big Bang, Waterfall, Spiro, Code/fix, and Agile. As time moves on and technology continues to change, new concepts are talked about such as automation testing. Of course the class makes sure that it is still maintaining some of its core concepts such as black box testing and white box testing. 
+
 </p>
 
 
