--- a/page4.html
+++ b/page4.html
@@ -19,17 +19,27 @@
 
 </header>
 <h1>
-Now
+For the first 5 months
 
 </h1>
-<img src="images/MayweatherVSPacquiao.jpg"  alt="mayweathervspacquiao" width="350" height="350"    />
+<img src="images/landd.png"  alt="landd" width="350" height="350"    />
 
 
-<p> The Sport has changed since its early beginnings when it was first seen as a barbaric sport. Today the rounds are less than they were from being more than 12 rounds. Rules are more strict than before to protect the fighter from lethal injuries. Referees are making good judgements to make sure fighters can continue or to avoid further critical injury. Regulations are set for all matches so no foul play is possible to happen.
+<p>
+Students attend the first half of YU and learn the fundamentals of how to communicate with peers and managements. Understanding what is to be expected in the workplace, how should you dress, how should you speak, what should you say to get around the corporate world. The technical skills are another thing you will be exposed to and train to get to know so that you have a niche in the tech internship you may be place in. Problem Solving skills are essential to have when working for whichever employer you are speaking to. One thing to keep in mind is, using critical thinking skills to gain a type of recognition in your internship and among staff members who are there to observe where your strengths are at and what are some growth areas a student should work on.
 
 </p>
 
-<p> One thing that should change in the sport is to make sure that the sport can make better judgements on how fights are held. Such as the detection of performance enhancing drugs that come up in the bouts. The fight should continue when both fighters have been checked out by doctors and cutmans effectively. One thing that boxers must do is to be aware of their gloves that they are not plastered. Such practices are still seen in fights and often not caught and could damage an opponents well being and end careers.
+<h1>Mods 1, 2, and 3</h1>
+
+
+
+<p>
+  During the 1st mod, students are given the chance to get acquainted with colleagues and staff members to understand where they stand in Year Up in terms of expertise and interests. Something that they could work on is there knowledge in the basics of business communication, which offers pointers on ideas of how should a person carry themselves around professionals such as your colleagues and managers. Pro skills is another valuable training that adds on to the idea of BC on what habits should the student adopt to attain a successful career. Tech skills in this part of the L&D phase are tech fundamentals and web development. Tech fundamentals engage student on what they know about hardware and software. Whereas Web Dev give firsthand try at the steps necessary to take on to making a website. This is also where Cyber Security track starts and instructors assess which student is interested in starting their tracks first when accepted in this path.
+
+  The second mod has students undergoing further training in both BC, pro skills, and tech skills. Tech skills that are brought up are system administrator and IT helpdesk. Both tech trainings provide a surface base teaching of what to expect in the tracks that will be taught for the upcoming mod(3). The last week, is where students display their current tech level and soft skills that they have learned throughout the year. This is a highly important time where instructors assess the level the student is at, so that they are geared up for success during mod 3 and internship.
+
+  The third and final mod now focuses on tracks for each student, to get them prepared for their internship. While students are working on track specific projects and deliverables, they are also taught on what areas should they be prepared so that when confronted with a task that they have not learned; they will find the best solution they can without giving up regardless of difficulty.
 </p>
 
 <footer>
